# moto

./: .editorconfig  .gitignore  MANIFEST.in  app.py  cli.py  env.py  frontend.py  hosts.yml  pyproject.toml  requirements.txt  server.py  services.yml  setup.py  testrunner.py  webservice.py
gavea/: cli.py  frontend.py  server.py  testrunner.py  util.py  webservice.py
gavea/plugins/: network.py  systemd.py  webservice.py
gavea/static/css/: style.css
gavea/templates/: index.html
gavea/templates/components/: _header.html
moto/: cli.py  env.py  exceptions.py  frontend.py  logging.py  server.py  testrunner.py  webservice.py
moto/plugins/: __init__.py  network.py  systemd.py  webservice.py
moto/static/css/: style.css
plugins/: __init__.py  network.py  systemd.py  webservice.py
static/css/: style.css  variables.css
status_page/: cache.py  exceptions.py  frontend.py  requirements.txt  server.py  testrunner.py  util.py  webservice.py
status_page/plugins/: network.py  systemd.py  webservice.py
status_page/static/css/: variables.css
status_page/templates/: test_detail.html
templates/: base.html  index.html
templates/components/: _header.html
